@@ -4,8 +4,6 @@ import ch.qos.logback.classic.Level;
 import ch.qos.logback.classic.Logger;
 import ch.qos.logback.classic.spi.ILoggingEvent;
 import ch.qos.logback.core.read.ListAppender;
-import com.azure.messaging.servicebus.ServiceBusReceivedMessage;
-import com.azure.messaging.servicebus.ServiceBusReceivedMessageContext;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
@@ -13,11 +11,13 @@ import jakarta.validation.constraints.NotNull;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.slf4j.LoggerFactory;
-import org.springframework.http.HttpStatus;
 import uk.gov.hmcts.reform.hmc.client.futurehearing.ErrorDetails;
 import uk.gov.hmcts.reform.hmc.config.MessageSenderToTopicConfiguration;
 import uk.gov.hmcts.reform.hmc.config.PendingStatusType;
@@ -27,6 +27,7 @@ import uk.gov.hmcts.reform.hmc.errorhandling.AuthenticationException;
 import uk.gov.hmcts.reform.hmc.errorhandling.BadFutureHearingRequestException;
 import uk.gov.hmcts.reform.hmc.errorhandling.ResourceNotFoundException;
 import uk.gov.hmcts.reform.hmc.helper.hmi.HmiHearingResponseMapper;
+import uk.gov.hmcts.reform.hmc.model.HearingStatusAuditContext;
 import uk.gov.hmcts.reform.hmc.model.HmcHearingResponse;
 import uk.gov.hmcts.reform.hmc.model.HmcHearingUpdate;
 import uk.gov.hmcts.reform.hmc.repository.HearingRepository;
@@ -36,21 +37,24 @@ import uk.gov.hmcts.reform.hmc.utils.TestingUtil;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.params.provider.Arguments.arguments;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
+import static org.springframework.http.HttpStatus.BAD_REQUEST;
+import static org.springframework.http.HttpStatus.INTERNAL_SERVER_ERROR;
+import static org.springframework.http.HttpStatus.NOT_FOUND;
 import static uk.gov.hmcts.reform.hmc.config.PendingStatusType.EXCEPTION;
-import static uk.gov.hmcts.reform.hmc.constants.Constants.EXCEPTION_MESSAGE;
 
 @DisplayName("PendingRequestServiceImpl")
 @ExtendWith(MockitoExtension.class)
@@ -77,13 +81,9 @@ class PendingRequestServiceImplTest {
     @Mock
     private MessageSenderToTopicConfiguration messageSenderToTopicConfiguration;
 
-    @Mock
-    private ServiceBusReceivedMessageContext messageContext = mock(ServiceBusReceivedMessageContext.class);
-
-    @Mock
-    private ServiceBusReceivedMessage message;
-
     private static final String TEST_EXCEPTION_MESSAGE = "Test Exception";
+    private static final String ERROR_MESSAGE =
+        "Hearing id: %s with Case reference: %s , Service Code: %s and Error Description: %s updated to status %s";
 
     private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper().registerModule(new JavaTimeModule());
 
@@ -132,7 +132,7 @@ class PendingRequestServiceImplTest {
 
         List<PendingRequestEntity> result = pendingRequestService.findAndLockByHearingId(pendingRequest.getHearingId());
 
-        assertThat(pendingRequest).isEqualTo(result.get(0));
+        assertThat(pendingRequest).isEqualTo(result.getFirst());
         verify(pendingRequestRepository, times(1))
             .findAndLockByHearingId(pendingRequest.getHearingId());
     }
@@ -148,7 +148,7 @@ class PendingRequestServiceImplTest {
 
         List<PendingRequestEntity> results = pendingRequestService.findQueuedPendingRequestsForProcessing();
 
-        assertThat(results.get(0)).isEqualTo(pendingRequest);
+        assertThat(results.getFirst()).isEqualTo(pendingRequest);
         verify(pendingRequestRepository, times(1))
             .findQueuedPendingRequestsForProcessing(anyLong(), anyString());
     }
@@ -254,46 +254,117 @@ class PendingRequestServiceImplTest {
             pendingRequestService.deletionWaitInterval)).isEqualTo("DAYS");
     }
 
-    @Test
-    void shouldUpdateHearingStatusThrowsBadRequestException() {
-        HearingEntity hearingEntity = TestingUtil.generateHearingEntityWithHearingResponse(2000000000L,
-                                                                         HttpStatus.BAD_REQUEST.value(),
-                                                                         "version is invalid");
-        Exception exception = new BadFutureHearingRequestException(TEST_EXCEPTION_MESSAGE,
-                                            TestingUtil.generateErrorDetails(TEST_EXCEPTION_MESSAGE,
-                                                                             HttpStatus.BAD_REQUEST.value()));
-        testUpdateHearingStatusThrowsException(hearingEntity, exception, TEST_EXCEPTION_MESSAGE);
+    @ParameterizedTest
+    @MethodSource("hearingsAndExceptions")
+    void shouldUpdateHearingStatusForException(HearingEntity hearing,
+                                               Exception exception,
+                                               String expectedErrorDescription,
+                                               int expectedErrorCode) {
+        JsonNode data = OBJECT_MAPPER.convertValue(generateErrorDetails(expectedErrorDescription, BAD_REQUEST.value()),
+                                                   JsonNode.class);
+        when(objectMapper.convertValue(any(), eq(JsonNode.class))).thenReturn(data);
+        when(hmiHearingResponseMapper.mapEntityToHmcModel(any(), any())).thenReturn(generateHmcResponse("EXCEPTION"));
+
+        ListAppender<ILoggingEvent> listAppender = getILoggingEventListAppender();
+
+        pendingRequestService.catchExceptionAndUpdateHearing(hearing, exception);
+
+        logger.detachAndStopAllAppenders();
+
+        String expectedErrorMessage = String.format(ERROR_MESSAGE,
+                                                    hearing.getId(),
+                                                    "1111222233334444",
+                                                    "Test",
+                                                    expectedErrorDescription,
+                                                    "EXCEPTION");
+        verifyLogErrors(listAppender, expectedErrorMessage);
+
+        verify(objectMapper, times(3)).convertValue(any(), eq(JsonNode.class));
+        verify(hearingRepository).save(hearing);
+        verify(hmiHearingResponseMapper).mapEntityToHmcModel(any(), any());
+        verify(messageSenderToTopicConfiguration).sendMessage(any(), any(), any(), any());
+        verify(hearingStatusAuditService).saveAuditTriageDetailsWithUpdatedDateOrCurrentDate(any());
+
+        assertThat(hearing.getStatus()).isEqualTo("EXCEPTION");
+        assertThat(hearing.getUpdatedDateTime()).isNotNull();
+        assertThat(hearing.getErrorDescription()).isEqualTo(expectedErrorDescription);
+        assertThat(hearing.getErrorCode()).isEqualTo(expectedErrorCode);
     }
 
     @Test
-    void shouldUpdateHearingStatusThrowsAuthenticationException() {
-        HearingEntity hearingEntity = TestingUtil.generateHearingEntityWithHearingResponse(2000000000L,
-                                             HttpStatus.INTERNAL_SERVER_ERROR.value(), "invalid credentials");
-        Exception exception = new AuthenticationException("Test Auth Exception", TestingUtil.generateAuthErrorDetails(
-            "Test Auth Exception", HttpStatus.INTERNAL_SERVER_ERROR.value()));
-        testUpdateHearingStatusThrowsException(hearingEntity, exception, "Test Auth Exception");
-    }
+    void shouldHandleNonRetriableException() {
+        HearingEntity hearing =
+            TestingUtil.generateHearingEntityWithHearingResponse(2000000001L, null, null);
+        when(hearingRepository.findById(2000000001L)).thenReturn(Optional.of(hearing));
 
-    @Test
-    void shouldUpdateHearingStatusThrowsResourceNotFoundException() {
-        HearingEntity hearingEntity = TestingUtil.generateHearingEntityWithHearingResponse(2000000000L,
-                                                 HttpStatus.NOT_FOUND.value(), "invalid credentials");
-        Exception exception = new ResourceNotFoundException(TEST_EXCEPTION_MESSAGE);
-        testUpdateHearingStatusThrowsException(hearingEntity, exception, TEST_EXCEPTION_MESSAGE);
+        ErrorDetails errorDetails = TestingUtil.generateErrorDetails("Bad request error", BAD_REQUEST.value());
+        JsonNode extractedErrorDetails = OBJECT_MAPPER.convertValue(errorDetails, JsonNode.class);
+        when(objectMapper.convertValue(errorDetails, JsonNode.class)).thenReturn(extractedErrorDetails);
+
+        HmcHearingResponse hmcHearingResponse = generateHmcResponse("EXCEPTION");
+        hmcHearingResponse.setHmctsServiceCode("Test");
+        when(hmiHearingResponseMapper.mapEntityToHmcModel(hearing.getHearingResponses().getFirst(), hearing))
+            .thenReturn(hmcHearingResponse);
+
+        JsonNode messageSenderMessage = OBJECT_MAPPER.convertValue(hmcHearingResponse, JsonNode.class);
+        when(objectMapper.convertValue(hmcHearingResponse, JsonNode.class)).thenReturn(messageSenderMessage);
+
+        JsonNode hearingStatusAuditErrorDescription = OBJECT_MAPPER.convertValue(extractedErrorDetails, JsonNode.class);
+        when(objectMapper.convertValue(extractedErrorDetails, JsonNode.class))
+            .thenReturn(hearingStatusAuditErrorDescription);
+
+        PendingRequestEntity pendingRequest = generatePendingRequest();
+        BadFutureHearingRequestException exception =
+            new BadFutureHearingRequestException(TEST_EXCEPTION_MESSAGE, errorDetails);
+
+        pendingRequestService.handleNonRetriableException(pendingRequest, exception);
+
+        assertThat(hearing.getStatus()).isEqualTo("EXCEPTION");
+        assertThat(hearing.getUpdatedDateTime()).isNotNull();
+        assertThat(hearing.getErrorDescription()).isEqualTo("Bad request error");
+        assertThat(hearing.getErrorCode()).isEqualTo(400);
+
+        verify(hearingRepository).findById(2000000001L);
+
+        verify(objectMapper).convertValue(errorDetails, JsonNode.class);
+        verify(hearingRepository).save(hearing);
+        verify(objectMapper).convertValue(hmcHearingResponse, JsonNode.class);
+        verify(messageSenderToTopicConfiguration)
+            .sendMessage(messageSenderMessage.toString(), "Test", "2000000001", null);
+        verify(objectMapper).convertValue(extractedErrorDetails, JsonNode.class);
+        verify(hearingStatusAuditService).saveAuditTriageDetailsWithUpdatedDateOrCurrentDate(
+            HearingStatusAuditContext.builder()
+                .hearingEntity(hearing)
+                .hearingEvent("list-assist-response")
+                .httpStatus("400")
+                .source("fh")
+                .target("hmc")
+                .errorDetails(hearingStatusAuditErrorDescription).build()
+        );
+
+        verify(pendingRequestRepository).markRequestForNonRetriableException(1L);
     }
 
     @Test
     void shouldLogErrorWhenHearingDoesNotExist() {
-        Long hearingId = 1L;
+        PendingRequestEntity pendingRequest = generatePendingRequest();
+
         Exception exception = new Exception("Test Exception");
-        when(hearingRepository.findById(anyLong())).thenReturn(Optional.empty());
+        when(hearingRepository.findById(2000000001L)).thenReturn(Optional.empty());
 
-        pendingRequestService.catchExceptionAndUpdateHearing(hearingId, exception);
+        ListAppender<ILoggingEvent> listAppender = getILoggingEventListAppender();
 
-        verify(hearingRepository, times(0)).save(any());
-        verify(hearingStatusAuditService,
-               times(0))
-                    .saveAuditTriageDetailsWithUpdatedDateOrCurrentDate(any());
+        pendingRequestService.handleNonRetriableException(pendingRequest, exception);
+
+        logger.detachAndStopAllAppenders();
+        verifyLogErrors(listAppender, "Hearing id 2000000001 not found");
+
+        verify(hearingRepository).findById(2000000001L);
+        verify(pendingRequestRepository).markRequestWithGivenStatus(1L, EXCEPTION.name());
+
+        verify(hearingRepository, never()).save(any());
+        verify(hearingStatusAuditService, never()).saveAuditTriageDetailsWithUpdatedDateOrCurrentDate(any());
+        verify(pendingRequestRepository, never()).markRequestForNonRetriableException(1L);
     }
 
     @Test
@@ -310,26 +381,34 @@ class PendingRequestServiceImplTest {
         verify(pendingRequestRepository, times(1)).findById(pendingRequestId);
     }
 
-    private void testUpdateHearingStatusThrowsException(HearingEntity hearingEntity, Exception exception,
-                                                        String expectedErrorDescription) {
-        JsonNode data = OBJECT_MAPPER.convertValue(
-            generateErrorDetails(expectedErrorDescription, HttpStatus.BAD_REQUEST.value()),
-            JsonNode.class);
-        when(hearingRepository.findById(hearingEntity.getId())).thenReturn(Optional.of(hearingEntity));
-        when(hearingRepository.save(any())).thenReturn(hearingEntity);
-
-        when(hmiHearingResponseMapper.mapEntityToHmcModel(any(), any()))
-            .thenReturn(generateHmcResponse(EXCEPTION.name()));
-        when(objectMapper.convertValue(any(), eq(JsonNode.class))).thenReturn(data);
-        doNothing().when(messageSenderToTopicConfiguration).sendMessage(any(), any(), any(), any());
-        ListAppender<ILoggingEvent> listAppender = getILoggingEventListAppender();
-        pendingRequestService.catchExceptionAndUpdateHearing(hearingEntity.getId(), exception);
-        verifyLogErrors(listAppender);
-        verify(hearingRepository, times(1)).save(any());
-        verify(hearingStatusAuditService, times(1))
-            .saveAuditTriageDetailsWithUpdatedDateOrCurrentDate(any());
-        assertThat(hearingEntity.getStatus()).isEqualTo(EXCEPTION.name());
-        assertThat(hearingEntity.getErrorDescription()).isEqualTo(expectedErrorDescription);
+    private static Stream<Arguments> hearingsAndExceptions() {
+        return Stream.of(
+            arguments(TestingUtil.generateHearingEntityWithHearingResponse(2000000000L,
+                                                                           BAD_REQUEST.value(),
+                                                                           "version is invalid"),
+                      new BadFutureHearingRequestException(TEST_EXCEPTION_MESSAGE,
+                                                           TestingUtil.generateErrorDetails(TEST_EXCEPTION_MESSAGE,
+                                                                                            BAD_REQUEST.value())),
+                      TEST_EXCEPTION_MESSAGE,
+                      BAD_REQUEST.value()
+            ),
+            arguments(TestingUtil.generateHearingEntityWithHearingResponse(2000000000L,
+                                                                           INTERNAL_SERVER_ERROR.value(),
+                                                                           "invalid credentials"),
+                      new AuthenticationException("Test Auth Exception",
+                                                  TestingUtil.generateAuthErrorDetails("Test Auth Exception",
+                                                                                       INTERNAL_SERVER_ERROR.value())),
+                      "Test Auth Exception",
+                      INTERNAL_SERVER_ERROR.value()
+            ),
+            arguments(TestingUtil.generateHearingEntityWithHearingResponse(2000000000L,
+                                                                           NOT_FOUND.value(),
+                                                                           "invalid credentials"),
+                      new ResourceNotFoundException(TEST_EXCEPTION_MESSAGE),
+                      TEST_EXCEPTION_MESSAGE,
+                      NOT_FOUND.value()
+            )
+        );
     }
 
     private PendingRequestEntity generatePendingRequest() {
@@ -339,11 +418,12 @@ class PendingRequestServiceImplTest {
         return pendingRequest;
     }
 
-    private static void verifyLogErrors(ListAppender<ILoggingEvent> listAppender) {
+    private static void verifyLogErrors(ListAppender<ILoggingEvent> listAppender, String expectedErrorMessage) {
         List<ILoggingEvent> logsList = listAppender.list;
         assertEquals(1, logsList.size());
-        assertEquals(Level.ERROR, logsList.get(0).getLevel());
-        assertEquals(String.format(EXCEPTION_MESSAGE), logsList.get(0).getMessage());
+        ILoggingEvent loggingEvent = logsList.getFirst();
+        assertEquals(Level.ERROR, loggingEvent.getLevel());
+        assertEquals(expectedErrorMessage, loggingEvent.getFormattedMessage());
     }
 
     private @NotNull ListAppender<ILoggingEvent> getILoggingEventListAppender() {
